--- a/The Shadow over Innsmouth/chapter2.tex
+++ b/The Shadow over Innsmouth/chapter2.tex
@@ -54,3 +54,30 @@ Manche Orte waren quasi verbotenes Gebiet, wie er unter beträhtlichem Aufwand g
 Und was die Einwohner von Innsmouth anging, so wusste der Junge kaum, was er mit ihnen anfangen sollte. Sie waren so verstohlen und so selten anzutreffen wie Tiere, die sich in Bauten leben und man mochte sich kaum vorstellen, wie sie sich die Zeit vertrieben, außer durch die vereinzelte Fischerei. Vielleicht --- anhand der Menge von Schwarzgebranntem, den sie konsumierten zu urteilen --- lagen sie tagsüber die meisten Stunden, vom Alkoholrausch benommen. Sie schienen in ihrem Missmut in einer Art Gemeinschaft und gemeinsamer Auffassung vereint, die Welt zu verschmähen, als gäbe es andere, dieser vorzuziehende Sphären des Daseins. Ihr Aussehen --- besonders die starrenden Augen, die nie zu blinzeln schienen --- war sicherlich schockierend genug und ihre Stimmen klangen abscheulich. Es war entsetzlich, sie in ihren Kirchen des nachts singen zu hören, besonders zu ihren Hauptfestivitäten oder Erneuerungszeremonien, die zweimal im Jahr, am 30. April und am 31. Oktober stattfanden.
 
 Sie waren dem Wasser zugetan und schwammen häufig, sowohl im Flluss als auch im Hafenbecken. Wettschwimmen raus zum Devil Reef fanden oft statt und jedermann schien gut fähig, sich an diesem anstrengenden Sport zu beteiligen. Wenn man es sich recht überlegt, so waren generell nur eher junge Leute in der Öffentlichkeit zu sehen und von diesen schienen die ältesten, am entstelltesten auszusehen. Ausnahmen waren meist Leute ohne jede Spur von Anomalie, wie der alte Angestellte im Hotel. Man mochte sich fragen, was aus der Masse an älteren Leuten wurde und ob das \glqq Innsmouth-Aussehen\grqq nicht ein selstames und heimtückisches Krankheitssymptom sei, das sein Opfer mehr und mehr ergriff, während die Jahre vorbeigingen.
+
+Natürlich könnte nur ein sehr seltenes Leiden solche enormen und drastischen anatomischen Veränderunen in einem einzelnen ausgewachsenen Individuum --- Veränderungen, die Einfluss auf den Knochenbau bis auf die grundlegende Form des Schädels nahmen --- jedoch war nicht einmal dieser Gesichtspunkt rätselhafter oder beispielloser als die sichtbaren Züge der Krankheit im Ganzen. Es sei schwer, so bemerkte der Junge, zu diesem Thema irgendwelche wirklichen Schlüsse zu ziehen, da man die Einwohner nie persönlich kennenlerne, ganz gleich wie lang man in Innsmouth leben möge. 
+
+Der Jüngling war sich sicher, dass Exemplare, noch schlimmer als die schlimmsten sichtbaren, in einigen der  Häuser eingeschlossen gehalten wurden. Manchmal hörten Leute die seltsamsten Geräusche. Die wackeligen  Bruchbuden nördlich des Flusses waren angeblich durch geheime Tunnel verbunden und boten somit ein wahres Labyrinth ungesehener Abartigkeiten. Welch fremdes Blut --- falls überhaupt welches --- in diesen Wesen floss, war unmöglich zu sagen. Sie hielten manchmal bestimmte besonders widerwärtige Gestalten außer Sichtweite, wenn Regierungsbeamte und andere aus der Außenwelt in die Stadt kamen.
+
+Es wäre sinnlos, so mein Informant, die Einwohner irgendetwas über den Ort zu fragen. Der einzige, der reden mochte, war ein sehr alter, doch normal aussehender Mann, der im Armenhaus am nördlichen Rand der Stadt wohnte und seine Zeit herumlaufend oder vor dem Feuerwehrhaus lungernd herumbrachte. Dieser ergraute Kerl, Zadok Allen, war sechsundneunzig Jahre alt, etwas wirr im Kopf und außerdem der städtische Trunkenbold. Er war ein eigenartiges, verstohlenes Geschöpf und schaute ständig über seine Schulter als ob er in Furcht vor etwas lebe. Wenn er nüchtern war, konnte er überhaupt nicht dazu überredet werden, mit Fremden zu sprechen. Er war jedoch nicht im Stande, seinem liebsten Gift zu widerstehen und sobald er trunken war, würde er die erstaunlichsten Fragmente geflüsterter Erinnerungen von sich geben.
+
+Insgesamt jedoch, könnten wenig sinnvolle Einzelheiten von ihm gewonnen werden, da seine Geschichten allesamt irrsinige, unvollständige Andeutungen unmöglichen Wunders und Entsetzens die keinen anderen Ursprung als seine eigene gestörte Fantasie haben können. Niemand glaubte ihm jemals, doch die Einwohner mochten nicht, wenn er trank und mit Fremden sprach und es war nicht immer sicher, gesehen zu werden wie man ihn befragte. Er war es wahrscheinlich von dem sich einige der wildesten bekannten Gerüchte und Irrtümer ableiteten.
+
+Mehrere nicht einheimische Anwohner hatten von Zeit zu Zeit von grässlichen Anblicken berichtet, doch mit Zadoks Geschichten und den missgebildeten Bewohnern war es kein Wunder, dass solche Illusionen üblich geworden waren. Niemand der Fremden blieb jemals bis spät in die Nacht draußen, da es den weit verbreiteten Eindruck machte, dass es nicht klug sei, das zu tun. Außerdem waren die Straßen widerlich dunkel.
+
+Was die Geschäfte anging --- die Fülle an Fisch war sicherlich verblüffend, doch die Einheimischen nutzten dies weniger und weniger aus. Zudem fielen die Preise und die Konkurrenz erstarkte. Natürlich lag das eigentliche Geschäft der Stadt in der Raffinerie, deren Handelsbüro am Dorfplatz sich nur ein paar Türen östlich von unserem Standort befand. Der Alte Marsh war nie zu sehen, fuhr jedoch manchmal in einem geschlossenen, verhangenen Wagen zur Arbeit.
+
+Es kursierten alle möglichen Gerüchte darüber, wie Marsh mittlerweile aussah. Er war einmal ein großer Dandy gewesen und man sagte, er trüge noch immer einen feinen Gehrock aus der Zeit Edwards VII, eigentümlich an gewisse Missbildungen angepasst. Seine Söhne hatten einst das Büro am Platz geführt, doch in letzter Zeit hielten sie sich meistens verborgen und überließen die Hauptlast der Geschäfte der jüngeren Generation. Die Söhne und ihre Schwestern sahen mittlerweile auch sehr seltsam aus, besonders die älteren und man erzählte sich, dass ihre Gesundheit versage.
+
+Eine der Marsh-Töchter war eine  abstoßende, einem Reptil ähnlich aussehende Frau, die ein Übermaß an merkwürdigem Schmuck, der ganz klar zur gleichen exotischen Tradition wie die fremdartige Tiara gehörte. Mein Informant hatte dies oft bemerkt und hatte gehört, wie man darüber sprach, dass dies aus einer Art geheimem Schatz stamme, entweder von Piraten oder Dämonen angelegt. Die Geistlichen --- oder Priester, oder wie auch immer sie hier nun genannt wurden --- trugen solche Schmuckstücke ebenfalls als Kopfschmuck, doch bekam man sie nur selten zu Gesicht. Mehr Exemplare hatte der Junge nicht gesehen, obwohl die Existenz von vielen weiteren in Innsmouth gerüchtet wurde.
+
+Die Marshes, zusammen mit den anderen drei vornehmen Familien der Stadt --- den Waites, den Gilmans und den Eliots --- lebten allesamt sehr zurückgezogen. Sie wohnten in immensen Häusern entlang der Washington Street und mehrere davon beherbergten vermeintlich einige lebende Verwandtschaft, deren Anblick ihnen Öffentlichkeit verbat und deren Tod bereits gemeldet und dokumentiert war. 
+
+Mich davor warnend, dass viele der Straßenschilder fehlten, malte der junge Mann für mich eine grobe, aber ausreichende und gewissenhaft gezeichnete Karte der auffälligsten Merkmale der Stadt. Nach einer kurzen Analyse war ich mir sicher, dass sie von großem Nutzen sein würde und steckte sie unter übermäßigem Dank in die Tasche. Da mir die Schäbigkeit des einzigen Restaurants, das ich gesehen hatte nicht zusagte, kaufte ich einen anständigen Vorrat an Käsegebäck und Ingwerplätzchen, die mir später als Mittagessen dienen sollten. Mein Programm, so entschied ich, sah es vor, mich entlang der Hauptstraßen zu hangeln und mit jeglichen nicht einheimischen Menschen zu sprechen, die ich treffen möge um danach den Acht-Uhr-Bus nach Arkham zu nehmen. Die Stadt, soviel war sichtbar, formte ein signifikantes und überspitztes Beispiel gemeindlichen Verfalls, doch ich, der ich kein Sozialwissenschaftler war, würde meine ernsthaften Beobachtungen auf das Feld der Architektur beschränken.
+
+So begann ich meine systematische, doch halb verdutzte Tour durch Innsmouth's enge, vom Schatten verdorbene Straßen. Die Brücke überquerend und mich zum Getöse der unteren Wasserfälle wendend, kam ich der Marsh-Raffinerie nahe, die seltsam frei von Industrielärm schien. Sie stand auf der Klippe zum Fluss nahe einer Brücke und einem offenen Zusammenfluss von Straßen, die ich als das frühere Stadtzentrum betrachtete, das  sich nach der Revolution zum jetzigen Marktplatz verlagert hatte.
+
+Die Schlucht auf der Main Street Bridge wieder überquerend, traf ich auf einen äußerst verlassenen Bereich, bei dem mich ein ungewisser Schauder überkam. Ein Durcheinander zusammengefallener Giebeldächer formten eine zerklüftete und fantastische Silhouette, über der sich der makabere, enthauptete Turm einer uralten Kirche erhob.  Einige Häuser entlang der Hauptstraße waren bewohnt, doch die meisten waren fest verbarrikadiert. Unbefestigte Seitenstraßen hinunter erblickte ich die schwarzen, klaffenden Fenster verlassener Hütten, von denen viele aufgrund ihres sinkenden Fundaments in gefährlichen und unglaublichen Winkeln lehnten.
+Diese Fenster starrten so gespenstisch, dass es Überwindung kostete, sich ostwärts dem Ufer zuzuwenden. Sicher schwillt der Schrecken eines verlassenen Hauses eher in Form einer geometrischen, denn einer arithmetischen Folge mit der Zahl der Häuser, die sich mehren um eine Stadt gänzlicher Verwüstung zu formen. Der Anblick solch endloser Alleen von fischäugiger Leere und Tod und der Gedanke an unendlich viele verbundene, düstere Räume, aufgegeben an Spinnweben, Erinnerungen und den Eroberer Wurm, bringen rudimentäre Furcht und Abscheu hervor, das gefestigtste Weltbild zu zerstreuen vermag.
+
+Fish Street war so verlassen wie die Hauptstraße, unterschied sich aber durch zahlreiche geziegelte und steinerne Lagerhäuser, noch immer in ausgezeichnetem Zustand. Water Street glich ihr beinahe gänzlich, bis auf die großen Lücken zum Ufer hin, wo einst Werften gestanden hatten. Ich begegnete keinem lebenden Wesen bis auf die verprengten Angler weit draußen an der Mole und ich hörte nichts bis auf das Plätschern der Wellen im Hafen und dem Tosen der Wasserfälle des Manuxet. Diese Stadt begann, mir mehr und mehr auf die Nerven zu gehen und ich schaute heimlich hinter mich als ich meinen Weg zurück über die wackelige Water Street Bridge nahm. Die Fish Street Bridge lag laut der Zeichnung in Trümmern.
