--- a/The Shadow over Innsmouth/chapter5.tex
+++ b/The Shadow over Innsmouth/chapter5.tex
@@ -1,6 +1,6 @@
 \chapter*{V}
 
-Es war ein sanfter Regen, der mich bei Tage in dem mit Gestrüpp bewachsenen Kanal aus meiner Benommenheit erweckte und als ich auf die Straße stolperte, war keine Spur irgendwelcher Fußstapfen im Schlamm zu sehen. Der Fischgestank war ebenfalls verschwunden. Innsmouths verfallene Dächer und eingestürzte Türme thronten grau im Südosten, doch ich erspähte kein Lebewesen in den trostlosen Salzmarschen der Umgebung. Meine Uhr tickte noch und zeigte mir, dass es nach Mittag war.
+Es war ein sanfter Regen, der mich bei Tage in dem mit Gestrüpp bewachsenen Kanal aus meiner Benommenheit erweckte und als ich auf die Straße stolperte, war keine Spur irgendwelcher Fußstapfen im Schlamm zu sehen. Der Fischgestank war ebenfalls verschwunden. Innsmouth's verfallene Dächer und eingestürzte Türme thronten grau im Südosten, doch ich erspähte kein Lebewesen in den trostlosen Salzmarschen der Umgebung. Meine Uhr tickte noch und zeigte mir, dass es nach Mittag war.
 
 Die Realität dessen, was ich durchgemacht hatte, lag sehr ungewiss in meinem Bewusstsein, doch ich fühlte, dass etwas abscheuliches dort im Hintergrund lag. Ich musste weg von diesem vom Bösen überschatteten Innsmouth --- und so begann ich meine verkrampften, müden Glieder in Bewegung zu setzen. Trotz meiner Schwäche, des Hungers, der Schreckens und der Verwirrung fühlte ich mich nach einer ganzen Weile fähig, zu gehen, so dass ich langsam entlang der matschigen Straße nach Rowley losging. Bis zum Abend war ich im Dorf, hatte eine Mahlzeit zu mir genommen und mich mit vorzeigbaren Kleidern ausgestattet. Ich erwischte den Nachtzug nach Arkham und hatte am nächsten Tag ein langes und ernstes Gespräch mit Regierungsbeamten dort. Ein Prozess, den ich später in Boston wiederholte. Die hauptsächlichen Ergebnisse dieser Gespräche sind der Öffentlichkeit --- und ich wünschte, um der Normalität wegen, dass es nichts weiter zu erzählen gäbe. Vielleicht ist es der Wahnsinn, der mich überkommt --- doch vielleicht greift nun ein größerer Schrecken --- oder ein großes Wunder --- nach mir.
 
